--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,11 +1,11 @@
 {
-  "name": "CircleData",
+  "name": "FriendlyCouponPanda",
   "lang": "de-DE",
   "scope": "/",
   "start_url": "/",
   "display": "standalone",
   "orientation": "portrait",
-  "theme_color": "",
+  "theme_color": "#e37262",
   "icons": [
     {
       "src": "assets/favicon-256.png",
